for the stats, use a setting for how much of the race needs to be driven.